[tool.poetry]
name = "deep_mcts"
version = "1.0.0"
description = ""
authors = ["Henrik Bruåsdal <henbruas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "^1.4.0"
torchvision = "^0.5.0"
pandas = "^0.25.3"
matplotlib = "^3.1.2"
dataclasses = {version = "^0.7",python = "~3.6"}

[tool.poetry.dev-dependencies]
black = {version = "^19.10b0",allow-prereleases = true}
mypy = "^0.761.0"
pylint = "^2.4.4"
ipython = "^7.11.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
